// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Accordion Defaults smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAllColorVariants smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="Accordion_accordion_burgundy__D5fJ+ bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="Accordion_accordion_denim__y8IUg bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="Accordion_accordion_forest__mUDqI bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="Accordion_accordion_graphite__gDIbk bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="Accordion_accordion_ochre__R-gxM bottomSpacingXL">
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
            <p class="AccordionItem_subtitle__qhh61  AccordionItem_subtitle_medium__FwG+J">
              Beskrivelse
            </p>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
       id="htmlId"
       data-testid="123ID"
  >
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithIconLeft smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0 AccordionItem_header_iconLeft__2rTR2 AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_large__wTr+l"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_large__C52-6">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_large__ERwgq">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_large__j10wp AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithMedium smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithRef play-test 1`] = `
<div data-test-block="true">
  <div class
       id="dummyIdForwardedFromRef"
  >
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0  AccordionItem_header_medium__uP+op"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8 AccordionItem_title_medium__o8stj">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV AccordionItem_iconWrapper_medium__aT7bh">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o AccordionItem_icon__u4Hqu AccordionItem_chevron_medium__EWnpR AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithSmall smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="AccordionItem_accordionItem__m-eot">
      <div class="AccordionItem_tag__eCsSL">
        <button class="AccordionItem_header__erxD0"
                aria-expanded="false"
                type="button"
        >
          <div class="AccordionItem_titleWrapper__tGvRR">
            <div class="AccordionItem_title__HrXa8">
              Meg selv
            </div>
          </div>
          <div class="AccordionItem_iconWrapper__uFOlV">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz AccordionItem_icon__u4Hqu  AccordionItem_chevron_closed__9xfBm"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
